# 01-rcli

./: .pre-commit-config.yaml  Cargo.toml
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs
src/process/: csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs
