[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.6", features = ["http2", "query", "tracing"] }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "net", "macros", "fs"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zxcvbn = "3.1.0"
